--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <p>Press <kbd>&larr;</kbd> / <kbd>&rarr;</kbd> to show next glyph</p>
   <p>Press <kbd>&uarr;</kbd> / <kbd>&darr;</kbd> to change size</p>
 
-  <script src="script.js" />
+  <script src="script.js"></script>
 
 </body>
 
